--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -16,47 +16,45 @@ body{
     margin-top:  150px;
 }
 .ProfileImage{
-    width: 500px;
+    width: 600px;
 }
 .profile h2 {
     font-style: bold;
-    font-family: Arial;
-    transform: translatey(10px);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bolder;
+    transform: translatey(30px);
 }
-.profile h4 {
-    font-style: italic;
-    transform: translateY(1px);
-}
-.aaa{
-    margin-top: 200px;
-}
-.bbb{
-    margin-top: -50px;
-}
-.ABOUTME{
-    padding-bottom: 125px;
-}
+
 .ABOUTME h1{
-    transform: translateY(38px);
-    color: white;
+    transform: translateY(70px);
 }
 .ABOUTME div{
-    color: white;
     transform: translateY(30px);
 }
 .tabel {
     transform: translateY(40px);
     text-align: justify;
 }
-/* .education{    
 
-} */
 .education h1 {    
-    color: white;
-    transform: translateY(10px);
+    transform: translateY(150px);
 }
+.education .containerzz{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(200px);
+}
+.education .card{
+    background-color: rgba(107, 107, 107, 0.477);
+    width: 400px;
+    height: 300px;
+    color: rgb(255, 255, 255);
+    
+}
+/* }
 .EDUCATIONCARD {
-    position: absolute;
+    display: flex;
     top: 1800px;
     left: 350px;
     width: 290px;
@@ -101,7 +99,8 @@ body{
     border-radius: 8px;
     flex-direction: column;
     
-}
+} */
+
 .card-text{
     color: white;
 }
@@ -152,7 +151,7 @@ body{
 .ORGANISATIONCARD2{
     width: 1000PX;
     height: 225px;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     border: 1px solid snow;
     border-radius: 8px;
     flex-direction: column;
