--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,10 +3,15 @@ body{
     padding-bottom: 200px;
     color: white;
 }
+.nav {
+    position: sticky;
+    top: 0;
+    z-index: 1000; /* Memastikan navigasi bar berada di atas elemen lain */
+    padding: 10px 0; /* Sesuaikan padding sesuai kebutuhan */
+}
 .Link{
     color: aliceblue;
     font-family: Georgia;
-    margin-top: 20px;
 }
 .profile{
     display: flex;
@@ -42,89 +47,43 @@ body{
 .education .containerzz{
     display: flex;
     justify-content: center;
+    gap: 15px;
+    flex-wrap: wrap;
     align-items: center;
     transform: translateY(200px);
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .education .card{
     background-color: rgba(107, 107, 107, 0.477);
+    box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.411);
+    border: 1px solid black;
     width: 400px;
-    height: 300px;
+    height: 150px;
     color: rgb(255, 255, 255);
     
 }
-/* }
-.EDUCATIONCARD {
-    display: flex;
-    top: 1800px;
-    left: 350px;
-    width: 290px;
-    height: 250px;
-    background-color: black;
-    border: 1px solid snow;
-    border-radius: 8px;
-    flex-direction: column;
-    
-    
-}
-.EDUCATIONCARD2 {
-    position: absolute;
-    top: 1800px;
-    left: 650px;
-    width: 290px;
-    height: 250px;
-    background-color: black;
-    border: 1px solid snow;
-    border-radius: 8px;
-    flex-direction: column;
-}
-.EDUCATIONCARD3 {
-    position: absolute;
-    top: 1800px;
-    left: 950px;
-    width: 290px;
-    height: 250px;
-    background-color: black;
-    border: 1px solid snow;
-    border-radius: 8px;
-    flex-direction: column;
-}
-.EDUCATIONCARD4 {
-    position: absolute;
-    top: 1800px;
-    left: 1250px;
-    width: 290px;
-    height: 250px;
-    background-color: black;
-    border: 1px solid snow;
-    border-radius: 8px;
-    flex-direction: column;
-    
-} */
 
+.card-body h2{
+    text-align: center;
+   
+}
 .card-text{
-    color: white;
+    text-align: justify;
 }
-.GGG{
-    position: fixed;
-    top: 1000px;
+
+.organisasi .text-center{
+    margin-top: 450px;
+    transform: translateY(50px);
 }
-.GGGG{
-    position: fixed;
-    top : 1200px;
+.organisasi .card{
+    display: flex;
+    flex-direction: row;
+    width: 1000PX;
+    height: 225px;
+    background-color: rgba(107, 107, 107, 0.477);
 }
-.ACHIEV{
-    color: white;
-    margin-left: 825px;
-    margin-top: 1000px;
-}
-.ACHIEV div{
-    margin-top: 200px;
-}
-.organisasi h1{
-    color: white;
-    margin-top: 900px;
-}
-.ORGANISATIONCARD1{
+/* .ORGANISATIONCARD1{
     width: 1000PX;
     height: 225px;
     background-color: black;
@@ -195,4 +154,4 @@ body{
 .TEKSKARTU3 p{
     margin-left: 25px;
     margin-top: 30px;
-}
+} */
